Fix extra space from skip link anchor in default theme

--- a/plugins/themes/default/styles/head.less
+++ b/plugins/themes/default/styles/head.less
@@ -126,6 +126,12 @@
 			text-decoration: underline;
 		}
 	}
+
+	#siteNav {
+		position: absolute;
+		top: 0;
+		height: 0;
+	}
 }
 
 .pkp_navigation_user {
